Fix padding on mobile screen for hero section

--- a/src/index.css
+++ b/src/index.css
@@ -86,6 +86,7 @@ a > svg:hover {
 }
 
 .intro {
+  max-width: 50%;
   text-align: center;
 }
 
@@ -386,7 +387,12 @@ form > button {
   }
 
   section.hero {
-    background-position: 50% -15%;
+    padding: 0 8px;
+    background-position: 50% -35%;
+  }
+
+  .intro {
+    max-width: none;
   }
 
   .pic {
